# PUTM_EV_DASH_SOFTWARE_2022

./: .gitignore  Frame Parameters Sheet.ods  README.md  dash.sh  dv.xml  incomingFrames.xml  vcan.sh
Dash/: Dash.pro  canhandler.cpp  canhandler.h  canraw.cpp  canraw.h  canraw.ui  changeconfirm.cpp  changeconfirm.h  changeconfirm.ui  drivingselect.cpp  drivingselect.h  drivingselect.ui  dvselect.cpp  dvselect.h  dvselect.ui  gui.cpp  gui.h  guicomponent.h  guihandler.cpp  guihandler.h  logger.cpp  logger.h  logs.cpp  logs.h  logs.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  servicemode.cpp  servicemode.h  servicemode.ui  style.qss  timer.h  vehicle.h
Dash/CanHeaders/: PM08-CANBUS-APPS.hpp  PM08-CANBUS-AQCARD.hpp  PM08-CANBUS-AQ_CARD.hpp  PM08-CANBUS-BMSLV.hpp  PM08-CANBUS-BMS_HV.hpp  PM08-CANBUS-BMS_LV.hpp  PM08-CANBUS-DASH.hpp  PM08-CANBUS-LAPTIMER.hpp  PM08-CANBUS-LAP_TIMER.hpp  PM08-CANBUS-SF.hpp  PM08-CANBUS-STEERINGWHEEL.hpp  PM08-CANBUS-STEERING_WHEEL.hpp  PM08-CANBUS-TC.hpp  PM08-CANBUS-TELEMETRY.hpp  PM08-CANBUS-WHEELTEMP.hpp  PM08-CANBUS-YAWPROBE.hpp
ProgramData/: dv.xml  incomingFrames.xml  names.txt  presets.csv  settings.csv
i2c/: as5601.hpp  can.cpp  can.hpp  i2c.pro  main.cpp
i2c/lib/: i2c.c
tests/: CMakeLists.txt  gtest_dependency.pri  hello_test.cc  main.cpp  tests.pro  tst_test.cpp
